# uTheme

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: pyproject.toml  toc.yml  uEdition.yml
docs/en/: index.md
docs/en/extensions/: index.md  room3b-video.md
tests/: __init__.py
uedition_theme/: __about__.py
uedition_theme/ext/: __init__.py
uedition_theme/theme/: __init__.py  theme.toml
uedition_theme/theme/static/: uedition-theme.css
ueditor_theme/ext/: __init__.py
utheme/: __init__.py
utheme/theme/: __init__.py  theme.toml
