[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uEdition-Theme"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Mark Hall", email = "mark.hall@work.room3b.eu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["uEdition", "pydata-sphinx-theme", "sphinx", "sphinx_design"]

[project.urls]
Documentation = "https://github.com/uEdition/uTheme#readme"
Issues = "https://github.com/uEdition/uTheme/issues"
Source = "https://github.com/uEdition/uTheme"

[project.entry-points."sphinx.html_themes"]
uedition-theme = "uedition_theme.theme"

[tool.hatch.version]
path = "uedition_theme/__about__.py"


[tool.hatch.build.targets.sdist]
artifacts = ["uedition_editor/frontend/dist/**/*"]
exclude = [
  ".github",
  "docs",
  "tests",
  ".pre-config-config.yaml",
]

[tool.hatch.build.targets.wheel]
artifacts = ["uedition_editor/frontend/dist/**/*"]
exclude = [
  ".github",
  "docs",
  "tests",
  ".pre-config-config.yaml",
]

[tool.hatch.envs.default]
extra-dependencies = ["ruff==0.9.5"]

[tool.hatch.envs.default.scripts]
serve = "cd docs && uEdition serve"
ruff-check = "ruff check --exit-non-zero-on-fix {args:.}"
ruff-format-check = "ruff format --check {args:.}"
style-check = ["ruff-check", "ruff-format-check"]
style-fix = [
  "ruff check --fix {args:.}",
  "ruff format {args:.}"
]

[tool.ruff]
target-version = "py37"
line-length = 120

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "D",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # Pydocstyle settings
  "D203",
  "D212",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["uedition_editor"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:uedition_theme tests}"

[tool.coverage.run]
source_pkgs = ["uedition_theme", "tests"]
branch = true
parallel = true
omit = [
  "uedition_theme/__about__.py",
]

[tool.coverage.paths]
uedition_theme = ["uedition_theme", "*/uedition_theme/uedition_theme"]
tests = ["tests", "*/uedition_theme/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
