[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uTheme"
description = "The μTheme is a basic Sphinx theme for the μEdition"
requires-python = ">=3.10"
keywords = []
authors = [{ name = "Mark Hall", email = "mark.hall@room3b.eu" }]
classifiers = []
dependencies = []
version = "1.0.0"

[project.urls]
Documentation = "http://edition.com"
Issues = "http://edition.com"
Source = "http://edition.com"

[tool.hatch.envs.default]
dependencies = ["uEdition<3,>=2.1.0", "uEdition-Editor<3,>=2.0.1", "pydata_sphinx_theme"]
skip-install = true

[tool.hatch.envs.default.scripts]
init = "uEdition init {args}"
build = "uEdition build {args}"
serve = "uEdition serve {args}"
update = "uEdition update {args}"
migrate = "uEdition migrate {args}"
language = "uEdition language {args}"
edit = "uvicorn --port 8080 uedition_editor:app {args} {args}"
